--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,19 @@
   </dependencies>
   <build>
     <finalName>ServletDemo</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <path>/</path>
+          <contextFile>src/main/webapp/WEB-INF/web.xml</contextFile>
+          <mode>context</mode>
+          <charset>UTF-8</charset>
+          <warDirectory>target/${project.artifactId}-${project.version}</warDirectory>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
